basic homepage done

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         gtag('config', 'G-G5NBPJPM9P');
     </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/zoom-check.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Should I click this?</title>
+    <title>Should I Click This?</title>
   </head>
   <body>
     <div id="root"></div>
